<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.stefanusj.fruitstore.ui.cart.CartViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fruit.FruitFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppearance.FruitStore.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_cart"
                android:drawablePadding="@dimen/padding_m"
                android:padding="@dimen/padding_l"
                android:text="@string/cart_fragment_title"
                app:drawableTint="?colorOnBackground" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_cart"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clipToPadding="false"
            android:overScrollMode="never"
            android:paddingTop="@dimen/padding_m"
            android:paddingBottom="@dimen/padding_m"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/tv_total_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
            tools:listitem="@layout/cart_item" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_total_label"
            style="@style/TextAppearance.FruitStore.Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_l"
            android:text="@string/cart_total"
            app:layout_constraintBottom_toTopOf="@id/mb_order"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextAppearance.FruitStore.Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_l"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_total_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:price="@{viewModel.totalPrice}"
            tools:text="Rp12.000" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mb_order"
            style="@style/Widget.FruitStore.Button.NoInset.Sharp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{viewModel::onOrderClicked}"
            android:text="@string/fruit_order"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            style="?android:progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:isVisible="@{viewModel.isLoading}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>